feat: add documentation to delete opening
