# handler/response.go
@@ -39,3 +39,7 @@ type CreateOpeningResponse struct {
 	Message string                 `json:"message"`
 	Data    schema.OpeningResponse `json:"data"`
 }
+
+type DeleteOpeningResponse struct {
+	Message string `json:"message"`
+}
